avoid problem when empty values are provided